# utocoin

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
ci/test/: 03_test_script.sh
contrib/seeds/: nodes_main.txt  nodes_signet.txt  nodes_test.txt  nodes_testnet4.txt
doc/: build-unix.md
src/: CMakeLists.txt  bitcoin-cli.cpp  chainparamsseeds.h  hash.h  init.cpp  init.h  validation.cpp  validation.h
src/bench/: CMakeLists.txt
src/common/: signmessage.cpp
src/consensus/: amount.h  params.h
src/crypto/: CMakeLists.txt  hmac_sha256.h  scrypt-sse2.cpp  scrypt.cpp  scrypt.h
src/index/: coinstatsindex.cpp
src/kernel/: chainparams.cpp
src/node/: blockstorage.cpp  blockstorage.h  mempool_args.cpp
src/primitives/: block.cpp  block.h
src/qt/: CMakeLists.txt
src/rpc/: blockchain.cpp  client.cpp  mining.cpp
src/script/: interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.h
src/test/: CMakeLists.txt  amount_tests.cpp  bip324_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  blockfilter_index_tests.cpp  bloom_tests.cpp  denialofservice_tests.cpp  (+14 more)
src/utocoin/: CMakeLists.txt  init.cpp  init.h  stake_promise.h
src/utocoin/key-tool/: key-tool.cpp
src/utocoin/miner-pool/: miner-pool.h
src/utocoin/node/: transaction.cpp  transaction.h
src/utocoin/script/: functional_checker.h  signer_pickup_checker.h  transaction_getter.cpp  transaction_getter.h
src/utocoin/test/: CMakeLists.txt  check_data_sig_tests.cpp  scrypt_pow_tests.cpp  stake_burn_tests.cpp  stake_promise_tests.cpp  utocoin_test_fixture.cpp  utocoin_test_fixture.h
(+54 files in other folders)
